removendo login e compras

--- a/projeto-site/public/index.html
+++ b/projeto-site/public/index.html
@@ -33,10 +33,10 @@
             <img id="img-logo" src="./img/logo-vortex.png" alt="Logo Vortex">
             <h1 id="nome-logo">KOMPANY</h1>
         </div>
-        <div class="compras-login">
+        <!-- <div class="compras-login">
             <img src="./img/bag.png" alt="Carrinho de Compras">
             <img src="./img/user.png" alt="Fazer login">
-        </div>
+        </div> -->
     </div>
 
     <div class="foto-fundo">
