--- a/projeto-site/public/index.html
+++ b/projeto-site/public/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./img/logo-vortex.png" type="image/png" />
     <script src="js/javascript.js"></script>
-    <title>Index</title>
+    <title>Vortex Kompany</title>
 </head>
 
 <body>
