modificaçẽos na aplicação

--- a/projeto-site/public/index.html
+++ b/projeto-site/public/index.html
@@ -57,8 +57,28 @@
             <img src="./img/img-sobre.png" alt="Imagem Sobre">
         </div>
     </div>
+    <br><br><br><br><br>
+    <div class="opcoes-roupas">
+        <br><br>
+        <div class="camisas">
+            <h1>T.SHIRT</h1>
+            <img src="./img/camiseta-vortex.png" alt="Camiseta Vortex" id="camiseta">
+        </div>
+        <div class="shorts">
+            <h1>SHORTS</h1>
+            <img src="./img/shorts-vortex.png" alt="Shorts Vortex" id="short">
+        </div>
+        <div class="blusas">
+            <h1>BLUSA</h1>
+            <img src="./img/blusa-vortex.png" alt="Blusa Vortex" id="blusa">
+        </div>
+        <div class="calcas">
+            <h1>CALÇA</h1>
+            <img src="./img/calca-vortex.png" alt="Calça Vortex" id="calca">
+        </div>
+        <br>
+    </div>
     <br><br><br>
-    
 
 </body>
 
